<resources>
    <string name="app_name">English Focus</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome_back_string">Welcome Back</string>
    <string name="email_string">Email</string>
    <string name="sign_in_string">Sign In</string>
    <string name="password_string">Password</string>
    <string name="new_here__create_account_string">New here? Create account</string>
    <string name="forgot_your_password__string">Forgot your password?</string>
</resources>