<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__alternate_ek2_color"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/card"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/input_login_edit_text_animated"
            android:clickable="true"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/welcome_back_color"
            android:textColorHint="@color/email_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_back_string"
            android:textColor="@color/welcome_back_color"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vector"
            android:background="@drawable/input_login_edit_text_animated"
            android:clickable="true"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/welcome_back_color"
            android:textColorHint="@color/email_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <TextView
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_sign_in"
            android:clickable="true"
            android:gravity="center"
            android:text="Sign In"
            android:textColor="@color/sign_in_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <TextView
            android:id="@+id/buttonHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/new_here__create_account_string"
            android:textColor="@color/welcome_back_color"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <TextView
            android:id="@+id/buttonForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/forgot_your_password__string"
            android:textColor="@color/welcome_back_color"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonHaveAnAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>